fixed z-index on navbar

--- a/assets/css/stencil.scss
+++ b/assets/css/stencil.scss
@@ -88,6 +88,7 @@ header {
 
 #navbar {
 	background-color: #fff;
+	z-index: 10;
 }
 
 #mobile-menu {
